--- a/README.pod
+++ b/README.pod
@@ -22,13 +22,13 @@ B<Cloud> and B<CloudElement> in the same module.  It has no other external depen
 
 =begin html
 
-<p><center><img src="https://github.com/saiftynet/dummyrepo/blob/main/CloudElement/test.svg"></center></p>
+<p><center><img src="https://github.com/saiftynet/dummyrepo/blob/main/CloudElement/test.svg" width="400"></center></p>
 
 =end html
 
 =begin html
 
-<p><center><img src="https://github.com/saiftynet/dummyrepo/blob/main/CloudElement/textboxcloud.svg"></center></p>
+<p><center><img src="https://github.com/saiftynet/dummyrepo/blob/main/CloudElement/textboxcloud.svg" width="400"></center></p>
 
 =end html
 
