--- a/README.pod
+++ b/README.pod
@@ -73,6 +73,13 @@ can be passed separately or derived from the extension  (`.svg` or `.htm(l)?`).
 
 C<< $cloud->center() >> returns the center coordinates of the cloud center;
 
+C<< $cloud->placeAtCenter($element) ; >> places element at cloud center;
+
+C<< $cloud->placeRandomly($element) ; >> places element randomly at at empty space on cloud; 
+
+C<< $cloud->placeArchimedian($element) ; >> places element on the path of an Archimedian spiral starting from the cloud center. 
+
+C<< $cloud->compactAdd($element) ; >> this work by placing element at center, then progressively moving it at along Archimedian spiral until it does not overlap, then moving it towards the center.
 
 =head2 CloudElement
 
